--- a/doc/slha_input.dox
+++ b/doc/slha_input.dox
@@ -16,7 +16,7 @@ Block FlexibleSUSY
     3   0         # calculate SM pole masses
     4   2         # pole mass loop order
     5   2         # EWSB loop order
-    6   3         # beta-functions loop order
+    6   4         # beta-functions loop order
     7   2         # threshold corrections loop order
     8   1         # Higgs 2-loop corrections O(alpha_t alpha_s)
     9   1         # Higgs 2-loop corrections O(alpha_b alpha_s)
@@ -57,7 +57,7 @@ index | description                            | possible values                
  3    | calculate SM pole masses               | 0 (no) or 1 (yes)                           | 0 (= no)
  4    | pole mass loop order                   | 0, 1, 2                                     | 2 (= 2-loop)
  5    | EWSB loop order                        | 0, 1, 2                                     | 2 (= 2-loop)
- 6    | beta function loop order               | 0, 1, 2, 3                                  | 3 (= 3-loop)
+ 6    | beta function loop order               | 0, 1, 2, 3, 4                               | 4 (= 4-loop)
  7    | threshold corrections loop order       | 0, 1, 2                                     | 2 (= 2-loop)
  8    | higgs 2-loop correction O(at as)       | 0, 1                                        | 1 (= enabled)
  9    | higgs 2-loop correction O(ab as)       | 0, 1                                        | 1 (= enabled)
