--- a/ChangeLog
+++ b/ChangeLog
@@ -65,6 +65,16 @@ FlexibleSUSY 2.0.2 [not released yet]
    2) changing the top Yukawa coupling by higher orders (if available)
    and 3) changing the stong coupling by higher orders.
 
+ * Feature: Implementing the strong correction to the 4-loop beta
+   function of the quartic Higgs coupling in the SM from
+   [arxiv:1508.00912].  This 4-loop beta function contribution is
+   enabled in all FlexibleEFTHiggs models by default and can be
+   enabled in other SM-like models by setting the flag
+
+      UseSM4LoopRGEs = True
+
+   in the corresponding model file.
+
  * Bugfix (commit d00b4f5): Extract electric charge from
    particle-anti-particle-photon vertex if the user has not defined
    the electric charge in SARAH's particles.m file.
