--- a/doc/slha_input.dox
+++ b/doc/slha_input.dox
@@ -40,6 +40,7 @@ Block FlexibleSUSY
    27   1         # Higgs 3-loop corrections O(alpha_b alpha_s^2)
    28   1         # Higgs 3-loop corrections O(alpha_t^2 alpha_s)
    29   1         # Higgs 3-loop corrections O(alpha_t^3)
+   30   1         # Higgs 4-loop corrections O(alpha_t alpha_s^3)
 ~~~~~~~~~~~~~~~~~~~~~~~
 
 __Description__:
@@ -81,6 +82,7 @@ index | description                            | possible values                
 27    | higgs 3-loop correction O(ab as^2)     | 0, 1                                        | 1 (= enabled)
 28    | higgs 3-loop correction O(at^2 as)     | 0, 1                                        | 1 (= enabled)
 29    | higgs 3-loop correction O(at^3)        | 0, 1                                        | 1 (= enabled)
+30    | higgs 4-loop correction O(at as^3)     | 0, 1                                        | 1 (= enabled)
 
 ### Precision goal (`FlexibleSUSY[0]`) ###
 
@@ -502,6 +504,7 @@ Block FlexibleSUSY
    27   1                    # Higgs 3-loop corrections O(alpha_b alpha_s^2)
    28   1                    # Higgs 3-loop corrections O(alpha_t^2 alpha_s)
    29   1                    # Higgs 3-loop corrections O(alpha_t^3)
+   30   1                    # Higgs 4-loop corrections O(alpha_t alpha_s^3)
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 
 In FlexibleSUSY's Mathematica interface, the following settings should
