--- a/ChangeLog
+++ b/ChangeLog
@@ -66,14 +66,18 @@ FlexibleSUSY 2.0.2 [not released yet]
    and 3) changing the stong coupling by higher orders.
 
  * Feature: Implementing the strong corrections to the 4-loop beta
-   functions of the Yukawa and quartic Higgs couplings in the SM from
-   [arxiv:1508.00912, arXiv:1604.00853].  These 4-loop beta function
-   contributions are enabled in all FlexibleEFTHiggs models by default
-   and can be enabled in other SM-like models by setting the flag
+   functions of the strong gauge, Yukawa and quartic Higgs couplings
+   in the SM from [arxiv:1508.00912, arXiv:1604.00853, 1508.02680].
+   These 4-loop beta function contributions are enabled in all
+   FlexibleEFTHiggs models by default and can be enabled in other
+   SM-like models by setting the flag
 
       UseSM4LoopRGEs = True
 
    in the corresponding model file.
+
+   Many thanks to Alexander Bednyakov for providing the expression for
+   the 4-loop beta function for the strong gauge coupling.
 
  * Feature: Implementing 4-loop contributions to the Higgs pole mass
    in the Standard Model from [arxiv:1508.00912].  The 4-loop
