show HSSUSY setup in form of a figure

--- a/doc/hssusy.dox
+++ b/doc/hssusy.dox
@@ -5,8 +5,12 @@
 \section model_hssusy HSSUSY
 
 HSSUSY (high scale supersymmetry) is an implementation of the Standard
-Model, matched to the MSSM at the SUSY scale, \f$M_\text{SUSY}\f$.  At
-the SUSY scale, the quartic Higgs coupling,
+Model, matched to the MSSM at the SUSY scale, \f$M_\text{SUSY}\f$, The
+setup of HSSUSY is shown in the following figure.
+
+\image html images/HSSUSY_tower.svg
+
+At the SUSY scale, the quartic Higgs coupling,
 \f$\lambda(M_\text{SUSY})\f$ is predicted from the matching to the
 MSSM using the 1- and 2-loop threshold corrections of
 [arXiv:1407.4081, arxiv:1504.05200, arXiv:1703.08166].  The 3- and
