--- a/doc/hssusy.dox
+++ b/doc/hssusy.dox
@@ -10,30 +10,99 @@ setup of HSSUSY is shown in the following figure.
 
 \image html images/HSSUSY_tower.svg
 
-At the SUSY scale, the quartic Higgs coupling,
-\f$\lambda(M_\text{SUSY})\f$ is predicted from the matching to the
-MSSM using the 1- and 2-loop threshold corrections of
-[arXiv:1407.4081, arxiv:1504.05200, arXiv:1703.08166].  The 3- and
-partial 4-loop renormalization group equations of [arxiv:1504.05200,
-arxiv:1303.4364, arxiv:1508.00912, arXiv:1604.00853, arXiv:1508.02680]
+\subsection hssusy_boundary_conditions Boundary conditions
+
+__High scale__
+
+In HSSUSY, the `HighScale` variable is set to the SUSY scale,
+\f$M_{\text{SUSY}}\f$.  At this scale the quartic Higgs coupling,
+\f$\lambda(M_\text{SUSY})\f$, is predicted from the matching to the
+MSSM using the full 1-loop and dominant 2-loop threshold corrections
+of \f$O((\alpha_t + \alpha_b)\alpha_s + (\alpha_t + \alpha_b)^2 +
+\alpha_b\alpha_\tau + \alpha_\tau^2)\f$ from [<a
+href="https://arxiv.org/abs/1407.4081">arXiv:1407.4081</a>, <a
+href="https://arxiv.org/abs/1504.05200">arXiv:1504.05200</a>, <a
+href="https://arxiv.org/abs/1703.08166">arXiv:1703.08166</a>].
+
+The 3- and partial 4-loop renormalization group equations of
+[<a href="https://arxiv.org/abs/1303.4364">arXiv:1303.4364</a>,
+<a href="https://arxiv.org/abs/1307.3536">arXiv:1307.3536</a>,
+<a href="https://arxiv.org/abs/1508.00912">arXiv:1508.00912</a>,
+<a href="https://arxiv.org/abs/1508.02680">arXiv:1508.02680</a>,
+<a href="https://arxiv.org/abs/1604.00853">arXiv:1604.00853</a>]
 are used to run \f$\lambda(M_\text{SUSY})\f$ down to the electroweak
-scale.  At the electroweak scale, the gauge and Yukawa couplings as
-well as the SM vacuum expectation value (VEV) are calculated at the
+scale \f$M_Z\f$ or \f$M_{\text{EWSB}}\f$.
+
+__Low scale__
+
+The `LowScale` is set to \f$M_Z\f$.  At this scale, the
+\f$\overline{\text{MS}}\f$ gauge and Yukawa couplings
+\f$g_{1,2,3}(M_Z)\f$, \f$Y_{u,d,e}(M_Z)\f$, as well as the SM vacuum
+expectation value (VEV), \f$v(M_Z)\f$, are calculated at the full
 1-loop level from the known low-energy couplings
-\f$\alpha_{\text{em}}(M_Z)\f$, \f$\alpha_s(M_Z)\f$ and Standard Model
-masses.  The known 2-loop and 3-loop QCD threshold corrections for
-\f$\alpha_s(M_Z)\f$ can also be taken into account [hep-ph/9305305,
-hep-ph/9708255, hep-ph/9707474, hep-ph/0004189] by setting the
-threshold corrections flag appropriately.  The top Yukawa coupling
-\f$y_t(M_Z)\f$ is calculated at the full 1-loop level from the top
-pole mass, taking optionally 2-loop [hep-ph/9803493] and 3-loop
-[arxiv:hep-ph/9911434] corrections into account, see @ref
-FlexibleSUSY_config .
+\f$\alpha_{\text{em}}^{\text{SM(5)}}(M_Z)\f$,
+\f$\alpha_s^{\text{SM(5)}}(M_Z)\f$, from the pole masses \f$M_Z\f$,
+\f$M_e\f$, \f$M_\mu\f$, \f$M_\tau\f$, \f$M_t\f$ as well as from the
+\f$\overline{\text{MS}}\f$ masses \f$m_b^{\text{SM(5)}}(m_b)\f$,
+\f$m_c^{\text{SM(4)}}(m_c)\f$, \f$m_s(2\,\text{GeV})\f$,
+\f$m_d(2\,\text{GeV})\f$, \f$m_u(2\,\text{GeV})\f$.  In addition to
+these 1-loop corrections, the known 2-loop and 3-loop QCD threshold
+corrections for \f$\alpha_s(M_Z)\f$ from [<a
+href="https://arxiv.org/abs/hep-ph/9305305">arXiv:hep-ph/9305305</a>,
+<a
+href="https://arxiv.org/abs/hep-ph/9708255">arXiv:hep-ph/9708255</a>,
+<a
+href="https://arxiv.org/abs/hep-ph/9707474">arXiv:hep-ph/9707474</a>,
+<a
+href="https://arxiv.org/abs/hep-ph/0004189">arXiv:hep-ph/0004189</a>]
+can be taken into account in addition by setting the threshold
+corrections flag appropriately.  In the calculation of the Standard
+Model \f$\overline{\text{MS}}\f$ top Yukawa coupling, \f$y_t(M_Z)\f$,
+the known 2-loop [<a
+href="https://arxiv.org/abs/hep-ph/9803493">arXiv:hep-ph/9803493</a>]
+and 3-loop [<a
+href="https://arxiv.org/abs/hep-ph/9911434">arXiv:hep-ph/9911434</a>]
+QCD corrections can be taken into account.  See Section @ref
+FlexibleSUSY_config for a description of the individual flags to
+enable/disable 2- and 3-loop threshold corrections in FlexibleSUSY.
 
-In @ref librarylink an example Mathematica script can be found, which
-illustrates how to perform a parameter scan using the HSSUSY model.
+__EWSB scale__
 
-__Input parameters__
+The Higgs and W boson pole masses, \f$M_h\f$ and \f$M_Z\f$ are
+calculated at the scale \f$M_{\text{EWSB}}\f$, which is an input
+parameter.  We recommend to set \f$M_{\text{EWSB}} = M_t\f$.
+
+Furthermore, the electroweak symmetry breaking condition is imposed at
+the scale \f$M_{\text{EWSB}}\f$ to fix the value of the bililear Higgs
+coupling \f$\mu^2(M_{\text{EWSB}})\f$.
+
+\subsection hssusy_pole_masses Pole masses
+
+The Higgs and W boson pole masses, \f$M_h\f$ and \f$M_Z\f$, are
+calculated at the full 1-loop level, including potential flavour
+mixing and momentum dependence.  Depending on the given configuration
+flags, additional 2-, 3- and 4-loop corrections to the Higgs pole mass
+of \f$O(\alpha_t\alpha_s)\f$ [<a
+href="https://arxiv.org/abs/1407.4336">arXiv:1407.4336</a>, Eq.(2.47)]
+and \f$O(\alpha_t^2)\f$ [<a
+href="https://arxiv.org/abs/1205.6497">arXiv:1205.6497</a>, Eq.(20)],
+as well as 3-loop corrections \f$O(\alpha_t^3 + \alpha_t^2\alpha_s +
+\alpha_t\alpha_s^2)\f$ [<a
+href="https://arxiv.org/abs/1407.4336">arXiv:1407.4336</a>] and 4-loop
+corrections \f$O(\alpha_t\alpha_s^3)\f$ [<a
+href="https://arxiv.org/abs/1508.00912">arXiv:1508.00912</a>] can be
+taken into account.
+
+@note Note, that the 3-loop contributions \f$O(\alpha_t^3 +
+\alpha_t^2\alpha_s)\f$ are incomplete, because the corresponding
+2-loop threshold corrections \f$O(\alpha_t^2 + \alpha_t\alpha_s)\f$ to
+the running top Yukawa coupling are not implemented yet.
+
+\subsection hssusy_input_parameters Input parameters
+
+HSSUSY takes the following parameters as input.  The MSSM parameters
+are defined in the \f$\overline{\text{DR}}\f$ scheme at the scale
+\f$M_{\text{SUSY}}\f$:
 
  Parameter                                  | description                                                  | input block/field
 --------------------------------------------|--------------------------------------------------------------|------------------
@@ -45,70 +114,96 @@ __Input parameters__
 \f$m_A(M_\text{SUSY})\f$                    | running CP-odd Higgs mass                                    | `EXTPAR[5]`
 \f$M_{\text{EWSB}}\f$                       | scale at which the pole mass spectrum is calculated          | `EXTPAR[5]`
 \f$A_t(M_\text{SUSY})\f$                    | trililear stop coupling                                      | `EXTPAR[7]`
-\f$\tan\beta(M_\text{SUSY})\f$              | \f$\tan\beta(M_\text{SUSY})=\frac{v_u}{v_d}\f$               | `EXTPAR[25]`
+\f$\tan\beta(M_\text{SUSY})\f$              | \f$\tan\beta(M_\text{SUSY})=v_u/v_d\f$                       | `EXTPAR[25]`
 \f$(m_{\tilde{q}}^2)_{ij}(M_\text{SUSY})\f$ | soft-breaking left-handed squark mass parameters             | `MSQ2IN`
 \f$(m_{\tilde{u}}^2)_{ij}(M_\text{SUSY})\f$ | soft-breaking right-handed up-type squark mass parameters    | `MSU2IN`
 \f$(m_{\tilde{d}}^2)_{ij}(M_\text{SUSY})\f$ | soft-breaking right-handed down-type squark mass parameters  | `MSD2IN`
 \f$(m_{\tilde{l}}^2)_{ij}(M_\text{SUSY})\f$ | soft-breaking left-handed slepton mass parameters            | `MSL2IN`
 \f$(m_{\tilde{e}}^2)_{ij}(M_\text{SUSY})\f$ | soft-breaking right-handed down-type slepton mass parameters | `MSE2IN`
 
-__EWSB__
+\subsection hssusy_running Running HSSUSY
 
-The 1-loop electroweak symmetry breaking condition is imposed at the
-scale \f$M_{\text{EWSB}}\f$ and is used to fix the value of the
-bililear Higgs coupling \f$\mu^2(M_{\text{EWSB}})\f$.
+We recommend to run HSSUSY with the following configuration flags: In
+an SLHA input file we recommend to use:
 
-__Boundary conditions__
+~~~~~~~~~~~~~~~~~~~~~~~{.txt}
+Block FlexibleSUSY
+    0   1.0e-05      # precision goal
+    1   0            # max. iterations (0 = automatic)
+    2   0            # algorithm (0 = all, 1 = two_scale, 2 = semi_analytic)
+    3   1            # calculate SM pole masses
+    4   4            # pole mass loop order
+    5   4            # EWSB loop order
+    6   4            # beta-functions loop order
+    7   3            # threshold corrections loop order
+    8   1            # Higgs 2-loop corrections O(alpha_t alpha_s)
+    9   1            # Higgs 2-loop corrections O(alpha_b alpha_s)
+   10   1            # Higgs 2-loop corrections O(alpha_t^2 + alpha_t alpha_b + alpha_b^2)
+   11   1            # Higgs 2-loop corrections O(alpha_tau^2)
+   12   0            # force output
+   13   1            # Top pole mass QCD corrections (0 = 1L, 1 = 2L, 2 = 3L)
+   14   1.0e-11      # beta-function zero threshold
+   15   0            # calculate observables (a_muon, ...)
+   16   0            # force positive majorana masses
+   17   0            # pole mass renormalization scale (0 = SUSY scale)
+   18   0            # pole mass renormalization scale in the EFT (0 = min(SUSY scale, Mt))
+   19   0            # EFT matching scale (0 = SUSY scale)
+   20   2            # EFT loop order for upwards matching
+   21   1            # EFT loop order for downwards matching
+   22   0            # EFT index of SM-like Higgs in the BSM model
+   23   1            # calculate BSM pole masses
+   24   123111321    # individual threshold correction loop orders
+   25   0            # ren. scheme for Higgs 3L corrections (0 = DR, 1 = MDR)
+   26   1            # Higgs 3-loop corrections O(alpha_t alpha_s^2)
+   27   1            # Higgs 3-loop corrections O(alpha_b alpha_s^2)
+   28   1            # Higgs 3-loop corrections O(alpha_t^2 alpha_s)
+   29   1            # Higgs 3-loop corrections O(alpha_t^3)
+   30   1            # Higgs 4-loop corrections O(alpha_t alpha_s^3)
+~~~~~~~~~~~~~~~~~~~~~~~
 
-_High scale_
+In the Mathematica interface we recommend to use:
 
-The high scale (`HighScale`) is fixed \f$M_{\text{SUSY}}\f$.  At
-\f$M_{\text{SUSY}}\f$, the quartic Higgs coupling
-\f$\lambda(M_\text{SUSY})\f$ is fixed using the 1- and leading 2-loop
-threshold corrections of [arXiv:1407.4081, arxiv:1504.05200,
-arXiv:1703.08166].
+~~~~~~~~~~~~~~~~~~~~~~~{.m}
+handle = FSHSSUSYOpenHandle[
+    fsSettings -> {
+        precisionGoal -> 1.*^-5,           (* FlexibleSUSY[0] *)
+        maxIterations -> 0,                (* FlexibleSUSY[1] *)
+        solver -> 0,                       (* FlexibleSUSY[2] *)
+        calculateStandardModelMasses -> 1, (* FlexibleSUSY[3] *)
+        poleMassLoopOrder -> 4,            (* FlexibleSUSY[4] *)
+        ewsbLoopOrder -> 4,                (* FlexibleSUSY[5] *)
+        betaFunctionLoopOrder -> 4,        (* FlexibleSUSY[6] *)
+        thresholdCorrectionsLoopOrder -> 3,(* FlexibleSUSY[7] *)
+        higgs2loopCorrectionAtAs -> 1,     (* FlexibleSUSY[8] *)
+        higgs2loopCorrectionAbAs -> 1,     (* FlexibleSUSY[9] *)
+        higgs2loopCorrectionAtAt -> 1,     (* FlexibleSUSY[10] *)
+        higgs2loopCorrectionAtauAtau -> 1, (* FlexibleSUSY[11] *)
+        forceOutput -> 0,                  (* FlexibleSUSY[12] *)
+        topPoleQCDCorrections -> 1,        (* FlexibleSUSY[13] *)
+        betaZeroThreshold -> 1.*^-11,      (* FlexibleSUSY[14] *)
+        forcePositiveMasses -> 0,          (* FlexibleSUSY[16] *)
+        poleMassScale -> 0,                (* FlexibleSUSY[17] *)
+        eftPoleMassScale -> 0,             (* FlexibleSUSY[18] *)
+        eftMatchingScale -> 0,             (* FlexibleSUSY[19] *)
+        eftMatchingLoopOrderUp -> 2,       (* FlexibleSUSY[20] *)
+        eftMatchingLoopOrderDown -> 1,     (* FlexibleSUSY[21] *)
+        eftHiggsIndex -> 0,                (* FlexibleSUSY[22] *)
+        calculateBSMMasses -> 1,           (* FlexibleSUSY[23] *)
+        thresholdCorrections -> 123111321, (* FlexibleSUSY[24] *)
+        higgs3loopCorrectionRenScheme -> 0,(* FlexibleSUSY[25] *)
+        higgs3loopCorrectionAtAsAs -> 1,   (* FlexibleSUSY[26] *)
+        higgs3loopCorrectionAbAsAs -> 1,   (* FlexibleSUSY[27] *)
+        higgs3loopCorrectionAtAtAs -> 1,   (* FlexibleSUSY[28] *)
+        higgs3loopCorrectionAtAtAt -> 1,   (* FlexibleSUSY[29] *)
+        higgs4loopCorrectionAtAsAsAs -> 1, (* FlexibleSUSY[30] *)
+        parameterOutputScale -> 0          (* MODSEL[12] *)
+    },
+    ...
+];
+~~~~~~~~~~~~~~~~~~~~~~~
 
-_EWSB scale_
-
-The scale at which the pole mass spectrum (including the Higgs mass)
-(`SUSYScale`) is calculated is the electroweak symmetry breaking
-scale, \f$M_{\text{EWSB}}\f$.
-
-_Low scale_
-
-At the low scale (`LowScale`) the gauge and Yukawa couplings as well
-as the VEV are calculated from the input parameters
-\f$\alpha_{\text{em}}(M_Z)\f$, \f$\alpha_s(M_Z)\f$, \f$G_F\f$,
-\f$m_u(2\,\text{GeV})\f$, \f$m_d(2\,\text{GeV})\f$,
-\f$m_s(2\,\text{GeV})\f$, \f$m_c(m_c)\f$, \f$m_b(m_b)\f$, \f$M_t\f$,
-\f$M_e\f$, \f$M_\mu\f$, \f$M_\tau\f$, \f$M_Z\f$ using the approach
-described in [arxiv:1609.00371, arxiv:1710.03760].
-
-Depending on the given input flags, the top Yukawa coupling,
-\f$y_t(M_Z)\f$, is calculated at the 1-loop level plus additional
-2-loop [hep-ph/9803493] and 3-loop [arxiv:hep-ph/9911434] QCD
-corrections, see \ref FlexibleSUSY_config .
-
-Depending on the given input flags, the strong coupling constant,
-\f$\alpha_s(M_Z)\f$, is calculated at the 1-loop level plus additional
-2-loop and 3-loop QCD corrections [hep-ph/9305305, hep-ph/9708255,
-hep-ph/9707474, hep-ph/0004189], see \ref FlexibleSUSY_config .
-
-__Pole masses__
-
-The Standard Model pole mass spectrum is calculated at the full 1-loop
-level, including flavour mixing and momentum dependence.  Depending on
-the given input flags, additional 2-loop corrections to the Higgs mass
-of \f$O(\alpha_t\alpha_s)\f$ [arxiv:1407.4336, Eq.(2.47)] and
-\f$O(\alpha_t^2)\f$ [arxiv:1205.6497, Eq.(20)], as well as 3-loop
-corrections \f$O(\alpha_t^3 + \alpha_t^2\alpha_s +
-\alpha_t\alpha_s^2)\f$ [arxiv:1407.4336] and 4-loop corrections
-\f$O(\alpha_t\alpha_s^3)\f$ [arxiv:1508.00912] can be taken into
-account.
-
-@note Note, that the 3-loop contributions \f$O(\alpha_t^3 +
-\alpha_t^2\alpha_s)\f$ are incomplete, because the corresponding
-2-loop threshold corrections \f$O(\alpha_t^2 + \alpha_t\alpha_s)\f$ to
-the running top Yukawa coupling are not implemented yet.
+In the Section @ref librarylink an example Mathematica script can be
+found, which illustrates how to perform a parameter scan using the
+HSSUSY model.
 
 */
